--- a/gradle.properties
+++ b/gradle.properties
@@ -22,13 +22,8 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-BASE_URL_ALNASHWAN="https://shajara.aksapp.com/"
-BASE_URL_DEMO="https://demo-shajara.aksapp.com/"
+BASE_URL="https://shajara.aksapp.com/"
 
-
-BASE_URL_ALSHUWAIMI ="https://alshuwaimi.aksapp.com/"
-
-BASE_URL_ALJAMAZ = "https://aljamaz.aksapp.com/"
 
 TRUE_VALUE = "true"
 FALSE_VALUE = 'false'
