--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,24 +14,20 @@ plugins {
 }
 
 android {
-//    signingConfigs {
-//        debug {
-//            storeFile file('/Users/amrhal/Desktop/android/shagra/keys/alnashwankey')
-//            storePassword 'Aksalnashwan'
-//            keyAlias 'key0'
-//            keyPassword 'Aksalnashwan'
-//        }
-//    }
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
-        applicationId "com.app.MoneyFellowsDelivery"
+        applicationId "com.MoneyFellowsDelivery"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 4
         versionName "1.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    viewBinding {
+        enabled = true
     }
 
     buildTypes {
@@ -51,31 +47,31 @@ android {
         viewBinding true
     }
 
-    flavorDimensions 'tree'
-    productFlavors {
+//    flavorDimensions 'tree'
+//    productFlavors {
+//
+//
+////        alnashwanTree {
+////            dimension 'tree'
+////            applicationId 'com.aks.alnashwanTree'
+////            versionCode 17
+////            versionName "2.8"
+////        }
+//
+//
+//
+//    }
 
-
-        alnashwanTree {
-            dimension 'tree'
-            applicationId 'com.aks.alnashwanTree'
-            versionCode 17
-            versionName "2.8"
-        }
-
-
-
-    }
-
-    productFlavors.all {
-        flavor ->
-            def name = flavor.getName()
-            def baseUrl = 'BASE_URL'
-            def isDemo = "IS_DEMO_APP"
-
-            // Specific values
-            buildConfigField "String", baseUrl, BASE_URL
-            buildConfigField "boolean", isDemo, "false"
-    }
+//    productFlavors.all {
+//        flavor ->
+//            def name = flavor.getName()
+//            def baseUrl = 'BASE_URL'
+//            def isDemo = "IS_DEMO_APP"
+//
+//            // Specific values
+//            buildConfigField "String", baseUrl, BASE_URL
+//            buildConfigField "boolean", isDemo, "false"
+//    }
 
 }
 
@@ -87,6 +83,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.1'
+    implementation 'androidx.databinding:databinding-runtime:8.2.0'
 
 
     testImplementation 'junit:junit:4.13.2'
@@ -118,8 +115,8 @@ dependencies {
     // implementation 'com.jakewharton.rxbinding4:rxbinding-core:4.0.0'
 
     //Coroutine
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0-native-mt'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0-native-mt'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
 
     //maps
     implementation 'com.google.android.gms:play-services-location:19.0.1'
